--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -1,1 +1,51 @@
+h1 {
+	text-align: center
+	}
+section.menu {
+	position: relative;
+	height: 100px;
+	margin-bottom: 20px;
+	margin-left: 5px;
+	margin-right:5px;
+	background-color: lightgreen;
+	border: 1px solid black;
+	box-sizing: border-box;
+	}
+	
+div.titlesec {
+	position: relative;
+	top: 0px;
+	right: 0px;
+	height: 20px;
+	width: 60px;
+	background-color: green;
+	border: 1px solid black;
+	color: white;
+	}
 
+	
+@media (min-width: 992px) {
+ 		.col_lg_3 {
+		width: 32%;
+		float: left;
+		}
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+	.col_md_6, .col_md_12 {
+	float: left;
+	}
+	.col_md_6 {
+	width: 47%;
+	}
+	.col_md_12 {
+	width: 95%;
+	}
+}
+
+@media (max-width: 767px) {
+	.col_sm_12 {
+		float: left;
+		width: 100%;
+		}
+	}	
